data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1093.wast
;; 4. **Test Description**:     Compose a loop block with an empty branch target array in the `br_table` instruction to ensure the instruction defaults to the provided target. Confirm that the absence of any valid index results in executing the default branch.    **Constraint**: Ensure `br_table` instruction specifies accurate fallback behavior when no branches are available.    **Relation to `br_table` Edge Cases**: Tests resiliency against an empty target array scenario, defaulting correctly.

(assert_invalid
  (module (func $loop_with_empty_br_table
    (loop (block (br_table 0 (i32.const 0)))))
  )
  "block type mismatch"
)